Mise à jour du projet de maintenance

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 spring.application.name=maintenance.prediction
 security.jwt.secret-key=Z8VQvVXmYqzA3Ln5Rb7PeM0sTqKwD3XsABCD1234EFGH5678
 security.jwt.issuer=maintenance.prediction
-
-
+server.port=${PORT:8080}
 spring.datasource.url=jdbc:postgresql://localhost:5432/database_pfe
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.data.jpa.repositories.bootstrap-mode=default
+
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 logging.level.org.springframework=DEBUG
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=alerte-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
 
 
 
