--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,15 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
+spring.kafka.consumer.group-id=data-processor-group
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.listener.concurrency=3
 
+spring.mvc.cors.allowed-methods=GET,POST
+# WebSocket Configuration
+spring.websocket.allowed-origins=*
+spring.websocket.max-text-message-buffer-size=65536
 
-
+# STOMP Protocol
+spring.messaging.stomp.broker.relay.enabled=false
+spring.messaging.stomp.broker.simple.enable-statistics=true
